Wed Mar  8 00:34:15 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* data/topic-change.glade:
	  - Disallow tabs in the topic input box, which makes the box much
	    more usable with the keyboard.
	* src/fe-gnome/topic-label.c:
	  - Make it so typing enter into the topic change box activates the
	    default response for the dialog, since newlines are meaningless in
	    IRC topics.

Sun Mar  5 11:28:31 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* configure.ac:
	  - Change libsexy version dependency to 0.1.6 because SexyTreeView
	    widget is only available since this release.

Sun Mar  5 01:34:09 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/navigation-tree.c:
	* data/xchat-gnome.glade:
	  - Use SexyTreeView for the userlist and so display a very cute
	    tooltip containing user's informations.

Fri Mar  3 17:46:15 MST 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/find-bar.c:
	* src/fe-gnome/navigation-tree.c:
	  - Set cursor position in the text entry after we grab focus, since
	    GtkEntry likes to select the contents of the entry when grabbing.
	    This makes it so existing text isn't selected after switching
	    channels/using the find bar/looking at the userlist.

Sat Mar  4 01:20:05 CET 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	* data/xchat-gnome.glade:
	  - We can now use the "change nick dialog" to be marked as away.
	  - Use gtk_dialog_run instead of a non blocking call. It's fix a bug
	    where callbacks were connected each time we opened the dialog and
	    so called too many times.
	  - Rename label "on all servers" to "Apply on all server" to be
	    clearer and more HIG compliant.

Thu Mar  2 22:46:51 CET 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/dcc-window.c:
	* data/dcc-accept.glade:
	* data/Makefile.am:
	  - Use GtkMessageDialog instead of Glade. (#333178)
